--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,6 +1,6 @@
 # .streamlit/secrets.toml
 
 [connections.snowflake]
-account = "GVNSTEC.QSA13098"
+account = "PFKUVMC.AI42355"
 user = "MDLANDI"
 authenticator = "EXTERNALBROWSER"
