--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -3,4 +3,9 @@
 [connections.snowflake]
 account = "PFKUVMC.AI42355"
 user = "MDLANDI"
-authenticator = "EXTERNALBROWSER"
+password = "hwLJJq6#f3kmN2Oi"
+role = "SYSADMIN"
+warehouse = "COMPUTE_WH"
+database = "smoothies"
+schema = "public"
+client_session_keep_alive = true
